test_suite/tests/ui/unexpected-literal/variant.stderr
error: unexpected literal in serde variant attribute
 --> $DIR/variant.rs:6:13
  |
6 |     #[serde("literal")]
  |             ^^^^^^^^^

error: aborting due to previous error

