test_suite/tests/ui/unexpected-literal/variant.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
enum E {
    #[serde("literal")]
    V,
}

fn main() {}
